# Xavi9Videos

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/models/: __init__.py  cosmos.py  fal_base.py  fal_kling.py  fal_ltx2.py  grok.py  ltx2.py  nvidia_build.py  svd.py  wan.py
app/ui/: components.py
app/utils/: storage.py  video.py
docs/: TASKS.md  plan.md
scripts/: download_models.sh  setup.sh
tests/: test_config.py  test_gpu.py  test_integration.py  test_models_cosmos.py  test_models_fal_kling.py  test_models_fal_ltx2.py  test_models_grok.py  test_models_ltx2.py  test_models_nvidia_build.py  test_models_svd.py  test_models_wan.py  test_storage.py
